2001-12-08  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-client.c: fix some warnings

	* gconf/gconf-internals.h: try to fix gettext issues

2001-12-08  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-value.c (gconf_value_validate): take const arg

	* gconf/gconf.c: add internal API to check that GConfEngine isn't
	being used "underneath" its owning GConfClient, thus causing 
	cache inconsistencies. Bad hack, yay.

	* gconf/gconf-client.c: Use new internal GConfEngine "exclusive
	owner" API
	(gconf_client_real_unreturned_error):
	silently ignore GCONF_ERROR_OVERRIDDEN, because if the system 
	is "locked down" most apps will probably call gconf_client_set 
	anyway.

	* gconf/gconf-client.h: fix comment to be accurate about how 
	overlaps are handled

2001-12-06  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: fix up check for gettext to do glib-gettext instead

	* configure.in: add gtk-doc checks and remove --docs-only
	since I don't think --docs-only works and don't see how it could.

	* doc/gconf/Makefile.am: make makefile use snazzy canonical
	gtk-doc makefile from gtk

	* doc/gconf/gconf.sgml: make it reflect current reality a bit
	more.

	* examples/basic-gconf-app.c: Update the example

	* examples/complex-gconf-app.c: Move the old basic-gconf-app.c
	into here.

	* gconf/gconf-listeners.c (gconf_listeners_remove): remove
	g_return_if_fail on 0 ID, since that will probably end up
	happening from time to time

2001-12-04  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-internals.c (open_empty_locked_file): improve error

	* gconf/gconftool.c (main): complain about using --config-source
	but not --direct

	* backends/xml-backend.c (resolve_address): don't try to lock 
	readonly sources; fixes the case where users install to a prefix 
	that they can write to, was causing problems for people using
	build scripts.

	* gconf/gconfd.c (gconf_set_exception): add missing value to case
	statement so we don't crash
